# mediawiki-tools-scap

./: .arcconfig  .arclint  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitreview  .mailmap  Dockerfile  Dockerfile.ci  MANIFEST.in  Makefile  README  README.rst  RELEASE.md  blank-requirements.txt  build-deb-in-docker  build-deb-in-environment  build_wheels.sh  changelog  package-lock.json  pyproject.toml  pytest.ini  requirements-common.txt  requirements-deploy.txt  requirements.txt  scap-in-train-dev  scap.cfg  scap.md  scap.python  scap.yaml  setup.cfg  setup.py  test-requirements.txt  tox.ini  verify-requirements.txt
.pipeline/: blubber.yaml  config.yaml
bootstrap/: install_local_version.sh
debian/: README  changelog  control  copyright  gbp.conf  install  rules  scap.bash-completion  scap.manpages  source.lintian-overrides
debian/bash_completion.d/: scap
debian/patches/: change-bin-dir.patch  change-shebangs.patch  series
debian/source/: options
docs/: Makefile  api.rst  autodocs.sh  conf.py  deploy_commands.rst  development.rst  glossary.rst  index.rst  intro.rst  intro_architecture.rst  intro_repo_config.rst  intro_what_does_it_mean.rst  pre-commit.sh  requirements.txt  scap.1  scap2.rst  scap2_commands.rst  scap3.rst  scripts.rst
docs/dev/: development.rst  index.rst  plugins.rst  pre-commit.sh  terminal_ui.rst
docs/scap2/: architecture.rst  commands.rst  index.rst
docs/scap3/: architecture.rst  checks.rst  config.rst  deploy_commands.rst  index.rst  repo_config.rst  ssh-access.rst
local-dev/: Dockerfile  cas_server.py  clean  clean-apiserver  docker-compose.yml  entrypoint.deploy  entrypoint.setup  get-otp  restart-apiserver  scap.cfg  start-apiserver  stop-apiserver
release-scripts/: generate-changelog  get-latest-beta-deb  perform-release  prepare-scap-release  scaps-installed-in-beta  update-scap-in-beta
scap/: __init__.py  ansi.py  arg.py  backport.py  browser.py  cdblib.py  checks.py  clean.py  cli.py  cmd.py  compat.py  config.py  context.py  deploy.py  deploy_promote.py  executionplan.py  fake_backport.py  gerrit.py  git.py  history.py  install_world.py  interaction.py  kubernetes.py  kubernetes_cli.py  lint.py  lock.py  log.py  logstash.py  logstash_checker.py  logstash_poller.py  main.py  mwscript.py  nrpe.py  opcache_manager.py  patch.py  patches.py  phorge_conduit.py  php_fpm.py  php_fpm_restart.py  pooler.py  (+23 more)
scap/fake_backport_data/: generate_files.py  prep_and_testservers_sync.jsonl  sync_remainder.jsonl
scap/plugins/: __init__.py  backport.py  clean.py  gerrit.py  kubernetes.py  patch.py  patches.py  php-fpm-restart.py  prep.py  rollback.py  say.py  synccanary.py  test.py  updateinterwikicache.py  updatewikiversions.py  wmfbetaautoupdate.py
scap/spiderpig/: __init__.py  api.py  io.py  jobrunner.py  model.py  session.py  testclient.py
scap/static/: package-lock.json  package.json
scap/templates/: backport.html  index.html  job_history.html  job_log.html  job_overview.html  k8s_deployments.html  k8s_stage_deployments.html  (+1 more)
scripts/: check  new_version  tag_release
subplot/: scap.py  scap.yaml
tests/: checks_test.py  log_test.py  ssh_test.py  utils_test.py
web/: .editorconfig  .env.development  .eslintignore  .eslintrc.json  .gitignore  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
(+112 files in other folders)
