[metadata]
name = scap
summary = Wikimedia deployment tool
description-file =
	README.rst
author = Wikimedia Foundation
author-email = wikitech-l@lists.wikimedia.org
home-page = https://wikitech.wikimedia.org/wiki/scap
classifier =
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[nosetests]
detailed-errors=1
with-doctest=1
with-coverage=1
cover-package=scap

[pep8]
ignore=E128
exclude=.tox,.venv,build,dist,doc,*.egg,*.egg-info

[flake8]
ignore=E128
count=1
show-pep8=1
show-source=1
statistics=1
exclude=.tox,.venv,build,dist,doc,*.egg,*.egg-info
